* chat: #2930 fixed: count of unread messages is now proper when chat window is minimized (Vogel)
* chat: #2929 fixed: improve blinking timing on chat window with new messages (Vogel)
* tabs: #2934 fixed: properly handle common close button settings (Vogel)
* chat: #2928 fixed: properly hadnle disabling "Store opened chats" option (Vogel)
* sound: ##2931 fixed: player thread could block itself on exit and never end (Vogel)

+++ version 2.0-alpha2
* windows: #2858 fixed: blinking main window on Kadu exit (Vogel)
* windows: #2910 fixed: unable to remove stale lock file (Vogel)
* windows: #2915 fixed: invalid tray tooltip (Vogel)
* windows: #2914 fixed: avatars not displayed properly in Open Chat with... window (Vogel)
* gadu: #2893 fixed: never show as online to buddies with 'Offline to' option on (Vogel)
* firewall: #2917 fixed: unable to set log file path (Vogel)

+++ version 2.0-alpha1
* qt: port to Qt 5.2 (beevvy)
* chat: #2669 implemented: store content of input box in chat widgets (Vogel)
* mediaplayer: #943 fixed: disable mediaplayer statuses after changing it manually (Vogel)
* chat: #1219 implemented: paste and send action added to chat widget (Vogel)
* gui: #2818 implemented: add option to open chat windows minimized on incoming message (Vogel)
* gui: #1510 implemented: hide description option also affects notifications (Vogel)
* plugins: #2825 implemented: plugin categories are now translated (Vogel)
* core: #2885 done: remove support for configuration files of Kadu 0.6.5 (Vogel)
* indicator_docking: #2682 done: support for new versions of Unity (Vogel)
* unity_integration: #2892 done: display number of unread messages in Unity Launcher (Vogel)
* jabber: #2886 fixed: add option to stay in chat room after closing chat window (Vogel)

+++ version 1.5
* otr: #2895 fixed: strange error messages when using libotr5-4.1.0 (Vogel)
* history: #2902 fixed: clear history menu item dissappears after a second (Vogel)

+++ version 1.4