@@ -9,7 +9,8 @@
 * chat: #2929 fixed: improve blinking timing on chat window with new messages (Vogel)
 * tabs: #2934 fixed: properly handle common close button settings (Vogel)
 * chat: #2928 fixed: properly hadnle disabling "Store opened chats" option (Vogel)
-* sound: ##2931 fixed: player thread could block itself on exit and never end (Vogel)
+* sound: #2931 fixed: player thread could block itself on exit and never end (Vogel)
+* windows: #2909 fixed: does not restore window geometry when "Start minimized" is on (Vogel)
 
 +++ version 2.0-alpha2
 * windows: #2858 fixed: blinking main window on Kadu exit (Vogel)
